Add loading to page products

--- a/client/ProductManager/src/app/components/common/products-table/products-table.component.html
+++ b/client/ProductManager/src/app/components/common/products-table/products-table.component.html
@@ -61,7 +61,7 @@
       <button mat-mini-fab color="primary" aria-label="Edit this product" (click)="handleEditProductClick(product)">
         <mat-icon>edit</mat-icon>
       </button>
-      <button mat-mini-fab color="accent" aria-label="Remove this product" (click)="handleRemoveProductClick(product)">
+      <button mat-mini-fab color="warn" aria-label="Remove this product" (click)="handleRemoveProductClick(product)">
         <mat-icon>delete</mat-icon>
       </button>
     </td>
