--- a/client/ProductManager/src/app/components/pages/products-page/products-page.component.html
+++ b/client/ProductManager/src/app/components/pages/products-page/products-page.component.html
@@ -5,8 +5,20 @@
   New product
 </button>
 
-<products-table
-  [products]="products$ | async"
-  (on-edit-product)="handleEditProductClick($event)"
-  (on-remove-product)="handleRemoveProductClick($event)"
-></products-table>
+<div *ngIf="isProductsLoaded; then productsTable; else loading"></div>
+
+<ng-template #productsTable>
+  <div class="mx-5 my-3" style="color:  pink;">
+    <products-table
+      [products]="products$ | async"
+      (on-edit-product)="handleEditProductClick($event)"
+      (on-remove-product)="handleRemoveProductClick($event)"
+    ></products-table>
+  </div>
+</ng-template>
+
+<ng-template #loading>
+  <div class="d-flex justify-content-center">
+    <mat-spinner mode="indeterminate" color="accent"></mat-spinner>
+  </div>
+</ng-template>
