Predesign product editor page

--- a/client/ProductManager/src/app/app.component.html
+++ b/client/ProductManager/src/app/app.component.html
@@ -1,2 +1,4 @@
-<h1>Hello, I'm CuteTN!</h1>
-<router-outlet></router-outlet>
+<div class="main-div">
+  <h1>CuteTN</h1>
+  <router-outlet></router-outlet>
+</div>
