--- a/client/ProductManager/src/app/components/pages/product-editor-page/product-editor-page.component.html
+++ b/client/ProductManager/src/app/components/pages/product-editor-page/product-editor-page.component.html
@@ -1,3 +1,7 @@
 <button class="btn btn-secondary m-1" (click)="handleToHomeClick()">
   Back home
 </button>
+
+<div class="mx-5 my-3">
+  <product-editor-form></product-editor-form>
+</div>
