--- a/client/ProductManager/src/app/components/common/product-editor-form/product-editor-form.component.html
+++ b/client/ProductManager/src/app/components/common/product-editor-form/product-editor-form.component.html
@@ -1,1 +1,110 @@
-<p>product-editor-form works!</p>
+<div class="d-flex container justify-content-center px-0">
+  <mat-card class="col-6 px-0 mx-0 product-editor-card">
+    <div class="d-flex col justify-content-center mt-3 mb-4">
+      <label class="card-title"> NEW PRODUCT </label>
+    </div>
+    <form [formGroup]="form" class="d-flex row justify-content-center p-2 m-0">
+      <div class="row col-12">
+        <mat-form-field appearance="fill" class="col">
+          <mat-label>ID</mat-label>
+          <input matInput [disabled]="true" placeholder="Product ID"/>
+          <mat-icon matSuffix>key</mat-icon>
+        </mat-form-field>
+      </div>
+
+      <div class="row col-12">
+        <mat-form-field appearance="fill" class="col">
+          <mat-label>Name</mat-label>
+          <input
+            matInput
+            placeholder="Enter the product name"
+            formControlName="name"
+          />
+        </mat-form-field>
+
+        <mat-form-field appearance="fill" class="col">
+          <mat-label>Supplier</mat-label>
+          <input
+            type="text"
+            placeholder="Select a supplier"
+            aria-label="Number"
+            matInput
+            [matAutocomplete]="autocompleteSupplier"
+          />
+          <mat-autocomplete #autocompleteSupplier="matAutocomplete">
+            <mat-option *ngFor="let option of [1, 2, 3]" [value]="option">
+              {{ option }}
+            </mat-option>
+          </mat-autocomplete>
+        </mat-form-field>
+      </div>
+
+      <div class="row col-12">
+        <mat-form-field appearance="fill" class="col">
+          <mat-label>Description</mat-label>
+          <textarea
+            matInput
+            placeholder="Provide product description"
+            maxlength="500"
+            [mat-autosize]="true"
+            formControlName="description"
+          ></textarea>
+        </mat-form-field>
+      </div>
+
+      <div class="row col-12">
+        <mat-form-field appearance="fill" class="col">
+          <mat-label>Release date</mat-label>
+          <input
+            matInput
+            [matDatepicker]="releaseDatePicker"
+            placeholder="Enter the product release date"
+            (click)="releaseDatePicker.open()"
+            readonly
+            formControlName="releaseDate"
+          />
+          <mat-datepicker-toggle matSuffix [for]="releaseDatePicker">
+          </mat-datepicker-toggle>
+          <mat-datepicker #releaseDatePicker> </mat-datepicker>
+        </mat-form-field>
+
+        <mat-form-field appearance="fill" class="col">
+          <mat-label>Discontinued date</mat-label>
+          <input
+            matInput
+            [matDatepicker]="discontinuedDatePicker"
+            placeholder="Enter the product discontinued date"
+            (click)="discontinuedDatePicker.open()"
+            readonly
+            formControlName="discontinuedDate"
+          />
+          <mat-datepicker-toggle matSuffix [for]="discontinuedDatePicker">
+          </mat-datepicker-toggle>
+          <mat-datepicker #discontinuedDatePicker> </mat-datepicker>
+        </mat-form-field>
+      </div>
+
+      <div class="row col-12">
+        <mat-form-field appearance="fill" class="col">
+          <mat-label>Price</mat-label>
+          <input
+            matInput
+            type="number"
+            min="0"
+            max="1000000000"
+            placeholder="Enter the product price"
+            formControlName="price"
+            #priceInput
+          />
+          <mat-icon matSuffix>{{
+            +priceInput.value === 0 ? "money_off" : "attach_money"
+          }}</mat-icon>
+        </mat-form-field>
+      </div>
+
+      <!-- rating -->
+      <!-- details -->
+    </form>
+  </mat-card>
+  <pre>{{ getProduct() | json }}</pre>
+</div>
