--- a/client/ProductManager/src/app/components/common/products-table/products-table.component.html
+++ b/client/ProductManager/src/app/components/common/products-table/products-table.component.html
@@ -51,7 +51,7 @@
   <ng-container matColumnDef="detail">
     <th mat-header-cell *matHeaderCellDef>Detail</th>
     <td mat-cell *matCellDef="let product">
-      {{ product.productDetail?.name }}
+      {{ product.productDetail?.details }}
     </td>
   </ng-container>
 
