--- a/client/ProductManager/src/app/components/common/product-editor-form/product-editor-form.component.css
+++ b/client/ProductManager/src/app/components/common/product-editor-form/product-editor-form.component.css
@@ -6,3 +6,8 @@
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 50px;
 }
+
+.rating-label {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bold;
+}
