--- a/client/ProductManager/src/app/components/common/product-editor-form/product-editor-form.component.html
+++ b/client/ProductManager/src/app/components/common/product-editor-form/product-editor-form.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex container justify-content-center px-0">
-  <mat-card class="col-6 px-0 mx-0 product-editor-card">
+  <mat-card class="col-lg-6 col-md-9 col-sm-12 px-0 mx-0 product-editor-card">
     <div class="d-flex col justify-content-center mt-3 mb-4">
       <label class="card-title"> NEW PRODUCT </label>
     </div>
@@ -7,7 +7,7 @@
       <div class="row col-12">
         <mat-form-field appearance="fill" class="col">
           <mat-label>ID</mat-label>
-          <input matInput [disabled]="true" placeholder="Product ID"/>
+          <input matInput [disabled]="true" placeholder="Product ID" />
           <mat-icon matSuffix>key</mat-icon>
         </mat-form-field>
       </div>
@@ -102,9 +102,45 @@
         </mat-form-field>
       </div>
 
-      <!-- rating -->
+      <div class="row col-12">
+        <mat-label>Favorite Fruits</mat-label>
+        <mat-chip-list #chipList aria-label="Fruit selection">
+          <mat-chip
+            *ngFor="let fruit of ['apple', 'banana', 'mango']"
+            [selectable]="true"
+            [removable]="true"
+            >
+            {{fruit}}
+            <mat-icon matChipRemove *ngIf="true">cancel</mat-icon>
+          </mat-chip>
+          <input
+            placeholder="New fruit..."
+            #fruitInput
+            [matAutocomplete]="auto"
+            [matChipInputFor]="chipList"
+          >
+        </mat-chip-list>
+        <mat-autocomplete #auto="matAutocomplete">
+          <mat-option *ngFor="let fruit of ['apple', 'banana', 'mango']" [value]="fruit">
+            {{fruit}}
+          </mat-option>
+        </mat-autocomplete>
+      </div>
+
       <!-- details -->
     </form>
+
+    <div class="d-flex row justify-content-center p-2 m-0">
+      <div class="d-flex col-12 justify-content-center">
+        <label class="rating-label">Rating</label>
+      </div>
+
+      <select-star-rating
+        [max-stars]="5"
+        class="row col-12"
+        (on-value-change)="handleRatingChange($event)"
+      ></select-star-rating>
+    </div>
   </mat-card>
-  <pre>{{ getProduct() | json }}</pre>
+  <!-- <pre>{{ getProduct() | json }}</pre> -->
 </div>
