Bind all fields in product editor form

--- a/client/ProductManager/src/app/components/common/product-editor-form/product-editor-form.component.css
+++ b/client/ProductManager/src/app/components/common/product-editor-form/product-editor-form.component.css
@@ -1,13 +1,14 @@
 .product-editor-card {
   border-radius: 30px;
+  background-color: whitesmoke;
 }
 
 .card-title {
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   font-size: 50px;
 }
 
 .rating-label {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: bold;
 }
