--- a/client/ProductManager/src/app/components/common/products-table/products-table.component.html
+++ b/client/ProductManager/src/app/components/common/products-table/products-table.component.html
@@ -48,7 +48,7 @@
     </td>
   </ng-container>
 
-  <ng-container matColumnDef="detail">
+  <ng-container matColumnDef="details">
     <th mat-header-cell *matHeaderCellDef>Detail</th>
     <td mat-cell *matCellDef="let product">
       {{ product.productDetail?.details }}
