--- a/client/ProductManager/src/app/components/common/product-editor-form/product-editor-form.component.html
+++ b/client/ProductManager/src/app/components/common/product-editor-form/product-editor-form.component.html
@@ -3,7 +3,11 @@
     <div class="d-flex col justify-content-center mt-3 mb-4">
       <label class="card-title"> NEW PRODUCT </label>
     </div>
-    <form [formGroup]="form" class="d-flex row justify-content-center p-2 m-0">
+    <form
+      [formGroup]="form"
+      class="d-flex row justify-content-center p-2 m-0"
+      (ngSubmit)="handleSubmitClick()"
+    >
       <div class="row col-12">
         <mat-form-field appearance="fill" class="col">
           <mat-label>ID</mat-label>
@@ -13,16 +17,40 @@
       </div>
 
       <div class="row col-12">
-        <mat-form-field appearance="fill" class="col">
+        <mat-form-field
+          appearance="fill"
+          class="col"
+          *ngIf="form.get('name') as nameControl"
+        >
           <mat-label>Name</mat-label>
           <input
             matInput
+            maxlength="50"
             placeholder="Enter the product name"
             formControlName="name"
+            #nameInput
           />
+          <mat-hint align="end">
+            {{ nameInput.value?.length ?? 0 }} / {{ nameInput.maxLength }}
+          </mat-hint>
+          <mat-error
+            *ngIf="nameControl.touched && nameControl.errors?.required"
+          >
+            A product name is required
+          </mat-error>
+          <mat-error
+            *ngIf="nameControl.touched && nameControl.errors?.maxlength"
+          >
+            A product name can't have more than
+            {{ nameControl?.errors?.maxlength?.requiredLength }} characters
+          </mat-error>
         </mat-form-field>
 
-        <mat-form-field appearance="fill" class="col">
+        <mat-form-field
+          appearance="fill"
+          class="col"
+          *ngIf="form.get('supplier') as supplierControl"
+        >
           <mat-label>Supplier</mat-label>
           <input
             type="text"
@@ -43,11 +71,22 @@
               {{ supplier.name }}
             </mat-option>
           </mat-autocomplete>
+          <mat-error
+            *ngIf="
+              supplierControl.touched && supplierControl.errors?.mustHasIdOrNull
+            "
+          >
+            Only provided suppliers are allowed
+          </mat-error>
         </mat-form-field>
       </div>
 
       <div class="row col-12">
-        <mat-form-field appearance="fill" class="col">
+        <mat-form-field
+          appearance="fill"
+          class="col"
+          *ngIf="form.get('description') as descriptionControl"
+        >
           <mat-label>Description</mat-label>
           <textarea
             matInput
@@ -55,12 +94,30 @@
             maxlength="500"
             [mat-autosize]="true"
             formControlName="description"
+            #descriptionInput
           ></textarea>
+          <mat-hint align="end">
+            {{ descriptionInput.value?.length ?? 0 }} /
+            {{ descriptionInput.maxLength }}
+          </mat-hint>
+          <mat-error
+            *ngIf="
+              descriptionControl.touched && descriptionControl.errors?.maxlength
+            "
+          >
+            A product description can't have more than
+            {{ descriptionControl?.errors?.maxlength?.requiredLength }}
+            characters
+          </mat-error>
         </mat-form-field>
       </div>
 
       <div class="row col-12">
-        <mat-form-field appearance="fill" class="col">
+        <mat-form-field
+          appearance="fill"
+          class="col"
+          *ngIf="form.get('releaseDate') as releaseDateControl"
+        >
           <mat-label>Release date</mat-label>
           <input
             matInput
@@ -73,13 +130,25 @@
           <mat-datepicker-toggle matSuffix [for]="releaseDatePicker">
           </mat-datepicker-toggle>
           <mat-datepicker #releaseDatePicker> </mat-datepicker>
+          <mat-error
+            *ngIf="
+              releaseDateControl.touched && releaseDateControl.errors?.required
+            "
+          >
+            A release date is required
+          </mat-error>
         </mat-form-field>
 
-        <mat-form-field appearance="fill" class="col">
+        <mat-form-field
+          appearance="fill"
+          class="col"
+          *ngIf="form.get('discontinuedDate') as discontinuedDateControl"
+        >
           <mat-label>Discontinued date</mat-label>
           <input
             matInput
             [matDatepicker]="discontinuedDatePicker"
+            [min]="form.get('releaseDate')?.value"
             placeholder="Enter the product discontinued date"
             (click)="discontinuedDatePicker.open()"
             readonly
@@ -88,11 +157,23 @@
           <mat-datepicker-toggle matSuffix [for]="discontinuedDatePicker">
           </mat-datepicker-toggle>
           <mat-datepicker #discontinuedDatePicker> </mat-datepicker>
+          <mat-error
+            *ngIf="
+              discontinuedDateControl.touched &&
+              discontinuedDateControl.errors?.required
+            "
+          >
+            A discontinued date is required
+          </mat-error>
         </mat-form-field>
       </div>
 
       <div class="row col-12">
-        <mat-form-field appearance="fill" class="col">
+        <mat-form-field
+          appearance="fill"
+          class="col"
+          *ngIf="form.get('price') as priceControl"
+        >
           <mat-label>Price</mat-label>
           <input
             matInput
@@ -106,6 +187,20 @@
           <mat-icon matSuffix>{{
             +priceInput.value === 0 ? "money_off" : "attach_money"
           }}</mat-icon>
+          <mat-error
+            *ngIf="priceControl.touched && priceControl.errors?.required"
+          >
+            Product price is required
+          </mat-error>
+          <mat-hint align="start"
+            >Valid price range: 0$ - 1.000.000.000$</mat-hint
+          >
+          <mat-error *ngIf="priceControl.touched && priceControl.errors?.min">
+            Product price must be at least {{ priceControl.errors?.min.min }}$
+          </mat-error>
+          <mat-error *ngIf="priceControl.touched && priceControl.errors?.max">
+            Product price must be at most {{ priceControl.errors?.max.max }}$
+          </mat-error>
         </mat-form-field>
       </div>
 
@@ -152,7 +247,11 @@
       </div>
 
       <div class="row col-12" formGroupName="productDetail">
-        <mat-form-field appearance="fill" class="col">
+        <mat-form-field
+          appearance="fill"
+          class="col"
+          *ngIf="form.get('productDetail.details') as detailsControl"
+        >
           <mat-label>Details</mat-label>
           <textarea
             matInput
@@ -160,22 +259,57 @@
             maxlength="500"
             [mat-autosize]="true"
             formControlName="details"
+            #detailsInput
           ></textarea>
+          <mat-hint align="end">
+            {{ detailsInput.value?.length ?? 0 }} /
+            {{ detailsInput.maxLength }}
+          </mat-hint>
+          <mat-error
+            *ngIf="detailsControl.touched && detailsControl.errors?.maxlength"
+          >
+            Product details can't have more than
+            {{ detailsControl?.errors?.maxlength?.requiredLength }}
+            characters
+          </mat-error>
         </mat-form-field>
+      </div>
+
+      <div class="row col-12 pb-3">
+        <div class="d-flex col-12 justify-content-center">
+          <label class="rating-label">Rating</label>
+        </div>
+
+        <select-star-rating
+          [max-stars]="5"
+          [initial-star]="3"
+          class="col-12"
+          (on-value-change)="handleRatingChange($event)"
+        ></select-star-rating>
+      </div>
+
+      <div class="row col-12 justify-content-end">
+        <button
+          class="col-lg-3 col-md-4 col-sm-4 mx-2"
+          mat-raised-button
+          type="reset"
+        >
+          RESET
+        </button>
+        <button
+          class="col-lg-3 col-md-4 col-sm-4 mx-2"
+          mat-raised-button
+          color="primary"
+          type="submit"
+        >
+          SUBMIT
+        </button>
       </div>
     </form>
 
-    <div class="d-flex row justify-content-center p-2 m-0">
-      <div class="d-flex col-12 justify-content-center">
-        <label class="rating-label">Rating</label>
-      </div>
+    <!-- <div class="d-flex row justify-content-center p-2 m-0">
 
-      <select-star-rating
-        [max-stars]="5"
-        class="row col-12"
-        (on-value-change)="handleRatingChange($event)"
-      ></select-star-rating>
-    </div>
+    </div> -->
   </mat-card>
   <!-- <pre>{{ getProduct() | json }}</pre> -->
 </div>
