Implement basic API flow for product editor
- needs more UX: confirmation dialog, notification
- needs more clean up: some of the subscriptions don't get unsubscribed
  correctly

- next: authentication

--- a/client/ProductManager/src/app/components/pages/product-editor-page/product-editor-page.component.html
+++ b/client/ProductManager/src/app/components/pages/product-editor-page/product-editor-page.component.html
@@ -3,5 +3,8 @@
 </button>
 
 <div class="mx-5 my-3">
-  <product-editor-form></product-editor-form>
+  <product-editor-form
+    [initial-product]="productToEdit"
+    (on-submit)="handleSubmitProduct($event)"
+  ></product-editor-form>
 </div>
