--- a/client/ProductManager/src/app/components/common/product-editor-form/product-editor-form.component.html
+++ b/client/ProductManager/src/app/components/common/product-editor-form/product-editor-form.component.html
@@ -11,7 +11,12 @@
       <div class="row col-12">
         <mat-form-field appearance="fill" class="col">
           <mat-label>ID</mat-label>
-          <input matInput [disabled]="true" placeholder="Product ID" />
+          <input
+            matInput
+            [disabled]="true"
+            placeholder="Product ID"
+            [value]="form.get('id')!.value ?? '(New product)'"
+          />
           <mat-icon matSuffix>key</mat-icon>
         </mat-form-field>
       </div>
@@ -122,6 +127,7 @@
           <input
             matInput
             [matDatepicker]="releaseDatePicker"
+            [max]="form.get('discontinuedDate')?.value"
             placeholder="Enter the product release date"
             (click)="releaseDatePicker.open()"
             readonly
@@ -282,7 +288,7 @@
 
         <select-star-rating
           [max-stars]="5"
-          [initial-star]="3"
+          [value]="form.get('rating')!.value ?? 5"
           class="col-12"
           (on-value-change)="handleRatingChange($event)"
         ></select-star-rating>
@@ -292,7 +298,8 @@
         <button
           class="col-lg-3 col-md-4 col-sm-4 mx-2"
           mat-raised-button
-          type="reset"
+          type="button"
+          (click)="handleResetFormClick()"
         >
           RESET
         </button>
@@ -306,10 +313,6 @@
         </button>
       </div>
     </form>
-
-    <!-- <div class="d-flex row justify-content-center p-2 m-0">
-
-    </div> -->
   </mat-card>
   <!-- <pre>{{ getProduct() | json }}</pre> -->
 </div>
