Add alert before and after deleting product
- Added MyDialog component but the thing was buggy for some unknown
  reasons

--- a/client/ProductManager/src/app/components/pages/home-page/home-page.component.html
+++ b/client/ProductManager/src/app/components/pages/home-page/home-page.component.html
@@ -4,3 +4,6 @@
 <button class="btn btn-success m-1" (click)="handleAddProductClick()">
   New product
 </button>
+<button class="btn m-1" (click)="handleTestNotiClick()">
+  Test Noti
+</button>
