Fix minor responsive

--- a/client/ProductManager/src/app/components/pages/product-editor-page/product-editor-page.component.html
+++ b/client/ProductManager/src/app/components/pages/product-editor-page/product-editor-page.component.html
@@ -2,7 +2,7 @@
   Back home
 </button>
 
-<div class="mx-5 my-3">
+<div class="mx-2 mx-md-3 mx-lg-5 my-3">
   <product-editor-form
     [initial-product]="productToEdit"
     (on-submit)="handleSubmitProduct($event)"
