--- a/client/ProductManager/src/app/components/common/product-editor-form/product-editor-form.component.css
+++ b/client/ProductManager/src/app/components/common/product-editor-form/product-editor-form.component.css
@@ -5,7 +5,14 @@
 
 .card-title {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  font-size: 50px;
+  white-space: nowrap;
+  font-size: 40px;
+}
+
+@media only screen and (min-width: 768px) {
+  .card-title {
+    font-size: 50px;
+  }
 }
 
 .rating-label {
