--- a/client/ProductManager/src/app/components/common/products-table/products-table.component.html
+++ b/client/ProductManager/src/app/components/common/products-table/products-table.component.html
@@ -1,11 +1,16 @@
-<table mat-table [dataSource]="products ?? []" class="mat-elevation-z8">
+<table
+  mat-table
+  matSort
+  [dataSource]="fillWithNullProducts(products)"
+  (matSortChange)="handleSortChange($event)"
+>
   <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef>Id.</th>
+    <th mat-header-cell mat-sort-header *matHeaderCellDef>Id.</th>
     <td mat-cell *matCellDef="let product">{{ product.id }}</td>
   </ng-container>
 
   <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef>Name</th>
+    <th mat-header-cell mat-sort-header *matHeaderCellDef>Name</th>
     <td mat-cell *matCellDef="let product">{{ product.name }}</td>
   </ng-container>
 
@@ -15,29 +20,31 @@
   </ng-container>
 
   <ng-container matColumnDef="release-date">
-    <th mat-header-cell *matHeaderCellDef>Release date</th>
+    <th mat-header-cell mat-sort-header *matHeaderCellDef>Release date</th>
     <td mat-cell *matCellDef="let product">{{ product.releaseDate | date }}</td>
   </ng-container>
 
   <ng-container matColumnDef="discontinued-date">
-    <th mat-header-cell *matHeaderCellDef>Discontinued date</th>
+    <th mat-header-cell mat-sort-header *matHeaderCellDef>Discontinued date</th>
     <td mat-cell *matCellDef="let product">
       {{ product.discontinuedDate | date }}
     </td>
   </ng-container>
 
   <ng-container matColumnDef="rating">
-    <th mat-header-cell *matHeaderCellDef>Rating</th>
+    <th mat-header-cell mat-sort-header mat-sort-header *matHeaderCellDef>
+      Rating
+    </th>
     <td mat-cell *matCellDef="let product">{{ product.rating }}</td>
   </ng-container>
 
   <ng-container matColumnDef="price">
-    <th mat-header-cell *matHeaderCellDef>Price</th>
+    <th mat-header-cell mat-sort-header *matHeaderCellDef>Price</th>
     <td mat-cell *matCellDef="let product">{{ product.price | currency }}</td>
   </ng-container>
 
   <ng-container matColumnDef="supplier">
-    <th mat-header-cell *matHeaderCellDef>Supplier</th>
+    <th mat-header-cell mat-sort-header *matHeaderCellDef>Supplier</th>
     <td mat-cell *matCellDef="let product">{{ product.supplier?.name }}</td>
   </ng-container>
 
@@ -58,10 +65,22 @@
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef>...</th>
     <td mat-cell *matCellDef="let product">
-      <button mat-mini-fab color="primary" aria-label="Edit this product" (click)="handleEditProductClick(product)">
+      <button
+        mat-mini-fab
+        color="primary"
+        matTooltip="Edit this product"
+        [hidden]="!product.id"
+        (click)="handleEditProductClick(product)"
+      >
         <mat-icon>edit</mat-icon>
       </button>
-      <button mat-mini-fab color="warn" aria-label="Remove this product" (click)="handleRemoveProductClick(product)">
+      <button
+        mat-mini-fab
+        color="warn"
+        matTooltip="Remove this product"
+        [hidden]="!product.id"
+        (click)="handleRemoveProductClick(product)"
+      >
         <mat-icon>delete</mat-icon>
       </button>
     </td>
