--- a/client/ProductManager/src/app/components/common/product-editor-form/product-editor-form.component.html
+++ b/client/ProductManager/src/app/components/common/product-editor-form/product-editor-form.component.html
@@ -27,7 +27,7 @@
           class="col"
           *ngIf="form.get('name') as nameControl"
         >
-          <mat-label>Name</mat-label>
+          <mat-label>Name<strong class="required">&nbsp;*</strong></mat-label>
           <input
             matInput
             maxlength="50"
@@ -123,7 +123,7 @@
           class="col"
           *ngIf="form.get('releaseDate') as releaseDateControl"
         >
-          <mat-label>Release date</mat-label>
+          <mat-label>Release date<strong class="required">&nbsp;*</strong></mat-label>
           <input
             matInput
             [matDatepicker]="releaseDatePicker"
@@ -150,7 +150,7 @@
           class="col"
           *ngIf="form.get('discontinuedDate') as discontinuedDateControl"
         >
-          <mat-label>Discontinued date</mat-label>
+          <mat-label>Discontinued date<strong class="required">&nbsp;*</strong></mat-label>
           <input
             matInput
             [matDatepicker]="discontinuedDatePicker"
@@ -180,7 +180,7 @@
           class="col"
           *ngIf="form.get('price') as priceControl"
         >
-          <mat-label>Price</mat-label>
+          <mat-label>Price<strong class="required">&nbsp;*</strong></mat-label>
           <input
             matInput
             type="number"
