--- a/client/ProductManager/src/app/components/pages/login-page/login-page.component.html
+++ b/client/ProductManager/src/app/components/pages/login-page/login-page.component.html
@@ -4,12 +4,17 @@
 
 <div class="d-flex row px-0 justify-content-center align-item-center">
   <mat-card
-    class="mat-elevation-z8 col-lg-4 col-md-6 col-sm-8 px-0 mx-0 mt-5 login-card"
+    class="
+      mat-elevation-z8
+      col-lg-4 col-md-6 col-sm-8
+      px-0
+      mx-0
+      mt-5
+      login-card
+    "
   >
     <div class="d-flex col justify-content-center mt-3 mb-4">
-      <label class="card-title">
-        LOGIN
-      </label>
+      <label class="card-title"> LOG IN </label>
     </div>
     <form
       [formGroup]="form"
@@ -22,7 +27,9 @@
           class="col"
           *ngIf="form.get('username') as usernameControl"
         >
-          <mat-label>Username<strong class="required">&nbsp;*</strong></mat-label>
+          <mat-label
+            >Username<strong class="required">&nbsp;*</strong></mat-label
+          >
           <input
             matInput
             maxlength="50"
@@ -43,20 +50,38 @@
           class="col"
           *ngIf="form.get('password') as passwordControl"
         >
-          <mat-label>Password<strong class="required">&nbsp;*</strong></mat-label>
+          <mat-label
+            >Password<strong class="required">&nbsp;*</strong></mat-label
+          >
           <input
             matInput
             maxlength="50"
             placeholder="Enter your password"
             formControlName="password"
-            type="password"
+            [type]="passwordVisibility ? 'text' : 'password'"
           />
+          <mat-icon
+            class="password-visibility-icon"
+            matSuffix
+            (click)="passwordVisibility = !passwordVisibility"
+            >{{
+              passwordVisibility ? "visibility" : "visibility_off"
+            }}</mat-icon
+          >
           <mat-error
             *ngIf="passwordControl.touched && passwordControl.errors?.required"
           >
             Password is required
           </mat-error>
         </mat-form-field>
+      </div>
+
+      <div class="row col-12 mb-3" *ngIf="responseError">
+        <mat-error> {{ responseError.message }} </mat-error>
+      </div>
+
+      <div class="d-flex row col-11 mb-3" *ngIf="isLoginInProgress">
+        <mat-progress-bar mode="indeterminate" color="accent"></mat-progress-bar>
       </div>
 
       <div class="row col-12 justify-content-end">
