--- a/client/ProductManager/src/app/components/pages/login-page/login-page.component.html
+++ b/client/ProductManager/src/app/components/pages/login-page/login-page.component.html
@@ -76,6 +76,11 @@
         </mat-form-field>
       </div>
 
+      <div class="row col-12 mb-2">
+        <a [routerLink]="['/register']"> Don't have an account? </a>
+        <a href="https://www.facebook.com/vohinh.toi" target=”_blank”> Forgot your password? </a>
+      </div>
+
       <div class="row col-12 mb-3" *ngIf="responseError">
         <mat-error> {{ responseError.message }} </mat-error>
       </div>
@@ -89,6 +94,7 @@
           class="col-lg-3 col-md-4 col-sm-4 mx-2"
           mat-raised-button
           type="reset"
+          (click)="handleResetButtonClick()"
         >
           RESET
         </button>
@@ -98,7 +104,7 @@
           color="primary"
           type="submit"
         >
-          SUBMIT
+          OK
         </button>
       </div>
     </form>
