--- a/client/ProductManager/src/app/components/pages/products-page/products-page.component.css
+++ b/client/ProductManager/src/app/components/pages/products-page/products-page.component.css
@@ -2,9 +2,9 @@
   position: absolute;
   top: 0;
   left: 0;
-  bottom: 56px;
+  bottom: 0;
   right: 0;
-  background: rgba(0, 0, 0, 0.15);
+  background: rgba(255, 209, 220, 0.5);
   z-index: 1;
   display: flex;
   align-items: center;
