Add loading effect for product editor page
Not yet works properly... but plan to work on that later.

--- a/client/ProductManager/src/app/components/pages/product-editor-page/product-editor-page.component.html
+++ b/client/ProductManager/src/app/components/pages/product-editor-page/product-editor-page.component.html
@@ -8,3 +8,7 @@
     (on-submit)="handleSubmitProduct($event)"
   ></product-editor-form>
 </div>
+
+<div class="screen-shade" *ngIf="isUploadInProgress">
+  <mat-spinner mode="indeterminate" color="accent"></mat-spinner>
+</div>
