--- a/client/ProductManager/src/styles.css
+++ b/client/ProductManager/src/styles.css
@@ -23,6 +23,21 @@ body {
   cursor: pointer;
 }
 
+.screen-shade {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 209, 220, 0.5);
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 /* @media screen and (max-width: 767px) and (orientation: landscape) {
   html {
     transform: rotate(-90deg);
