--- a/client/ProductManager/src/app/app.component.html
+++ b/client/ProductManager/src/app/app.component.html
@@ -1,3 +1,4 @@
-<div class="main-div">
-  <router-outlet></router-outlet>
+<div class="d-flex flex-column main-div">
+  <navbar></navbar>
+  <router-outlet class="flex-1"></router-outlet>
 </div>
