--- a/client/ProductManager/src/app/components/pages/home-page/home-page.component.css
+++ b/client/ProductManager/src/app/components/pages/home-page/home-page.component.css
@@ -1,8 +1,13 @@
-.screen-wrapper {
+.bg-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   overflow: hidden;
-  width: 100vw;
-  height: 100vh;
-  background-image: url("../../../../assets/home-bg.jpg");
+  background-image: url("/../../../assets/home-bg.jpg");
   background-size: 100%;
+  /* width: 100%; */
+  /* height: 100%; */
   opacity: 0.9;
 }
