--- a/client/ProductManager/src/app/components/pages/home-page/home-page.component.html
+++ b/client/ProductManager/src/app/components/pages/home-page/home-page.component.html
@@ -1,21 +1,1 @@
-<div class="screen-wrapper">
-  <div *ngIf="username">
-    <h2>Logged in with username: {{ username }}</h2>
-  </div>
-
-  <button class="btn btn-primary m-1" (click)="handleToProductsClick()">
-    To products list
-  </button>
-  <button class="btn btn-success m-1" (click)="handleAddProductClick()">
-    New product
-  </button>
-  <button class="btn btn-success m-1" (click)="handleLoginClick()">Log in</button>
-  <button class="btn btn-success m-1" (click)="handleLogoutClick()">
-    Log out
-  </button>
-  <button class="btn btn-success m-1" (click)="handleRegisterClick()">
-    Register
-  </button>
-
-  <button class="btn m-1" (click)="handleTestNotiClick()">Test Noti</button>
-</div>
+<div class="bg-img flex-1"></div>
