--- a/client/ProductManager/src/styles.css
+++ b/client/ProductManager/src/styles.css
@@ -38,6 +38,14 @@ body {
   justify-content: center;
 }
 
+.spacer {
+  flex: 1 1 auto;
+}
+
+navbar {
+  z-index: 10;
+}
+
 /* @media screen and (max-width: 767px) and (orientation: landscape) {
   html {
     transform: rotate(-90deg);
