Separate Add product and Edit product route

--- a/client/ProductManager/src/app/components/common/product-editor-form/product-editor-form.component.html
+++ b/client/ProductManager/src/app/components/common/product-editor-form/product-editor-form.component.html
@@ -1,5 +1,13 @@
 <div class="d-flex container justify-content-center px-0">
-  <mat-card class="mat-elevation-z8 col-lg-6 col-md-9 col-sm-12 px-0 mx-0 product-editor-card">
+  <mat-card
+    class="
+      mat-elevation-z8
+      col-lg-6 col-md-9 col-sm-12
+      px-0
+      mx-0
+      product-editor-card
+    "
+  >
     <div class="d-flex col justify-content-center mt-3 mb-4">
       <label class="card-title">
         {{ form.get("id")?.value ? "UPDATE PRODUCT" : "NEW PRODUCT" }}
