Add loading dialogs

--- a/client/ProductManager/src/app/components/pages/product-editor-page/product-editor-page.component.html
+++ b/client/ProductManager/src/app/components/pages/product-editor-page/product-editor-page.component.html
@@ -33,6 +33,6 @@
   </div>
 </ng-template>
 
-<div class="screen-shade" *ngIf="isUploadInProgress">
+<!-- <div class="screen-shade" *ngIf="isUploadInProgress">
   <mat-spinner mode="indeterminate" color="accent"></mat-spinner>
-</div>
+</div> -->
