--- a/client/ProductManager/src/app/components/pages/products-page/products-page.component.html
+++ b/client/ProductManager/src/app/components/pages/products-page/products-page.component.html
@@ -17,9 +17,12 @@
 
 <div class="mx-5 my-3" [hidden]="state === 'Error'">
   <div class="mat-elevation-z8 div-table">
-    <div class="screen-shade" *ngIf="state === 'Loading'">
+
+    <!-- NOTE: Old loading, no longer needed.  -->
+    <!-- <div class="screen-shade" *ngIf="state === 'Loading'">
       <mat-spinner mode="indeterminate" color="accent"></mat-spinner>
-    </div>
+    </div> -->
+    
     <products-table
       [products]="products$ | async"
       [min-rows]="filterParams?.limit ?? INITIAL_LIMIT"
@@ -37,12 +40,6 @@
     ></mat-paginator>
   </div>
 </div>
-
-<ng-template #fetchLoading>
-  <div class="d-flex justify-content-center">
-    <mat-spinner mode="indeterminate" color="accent"></mat-spinner>
-  </div>
-</ng-template>
 
 <div class="container" [hidden]="state !== 'Error'">
   <div class="d-flex row justify-content-center">
