Apply Angular guard

--- a/client/ProductManager/src/app/components/pages/not-found-page/not-found-page.component.html
+++ b/client/ProductManager/src/app/components/pages/not-found-page/not-found-page.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-center">
-  <div class="row col-xs-12 col-sm-10 col-md-8 col-lg-5 col-12">
+  <div class="row col-xs-12 col-sm-10 col-md-8 col-lg-5 col-12 mt-3">
     <snake-game (on-snake-eat)="handleSnakeEat($event)" (on-snake-die)="handleSnakeDie($event)"></snake-game>
   </div>
 </div>
